--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secret Valentine ❤️</title>
-    <link rel="stylesheet" href="love.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container" id="mainContainer">
@@ -20,6 +20,6 @@
 
     <div class="message-container" id="messageContainer"></div>
 
-    <script src="love.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
